small tweaks to ensure that margins are correct and there are no scrollbars

--- a/gogreen_web/premie.css
+++ b/gogreen_web/premie.css
@@ -75,7 +75,7 @@ q:before, q:after {
 
 #main{
 	width: 100%;
-	height: 355px;
+	height: 385px;
 	background: #fff;
 	border-radius: 3px; 
 	-moz-border-radius: 3px; 
